--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,19 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.4",
         "symfony/console": "4.3.*",
+        "symfony/debug": "4.3.*",
+        "symfony/debug-bundle": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/translation": "4.3.*",
+        "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/var-dumper": "4.3.*"
     },
     "config": {
         "preferred-install": {
