Begin translation submission

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/profiler-pack": "^1.0",
         "symfony/var-dumper": "4.3.*"
     },
     "config": {
