--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/debug-bundle": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
